--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                     <div class="service-text">
                                         <h3>Manufacturing</h3>
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                            hello. Phase nec preti mi. Curabi facilis ornare velit non
                                         </p>
                                     </div>
                                 </div>
@@ -383,13 +383,13 @@
                     </div>
                     <div class="timeline-item Left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2013 March  - 2013 December</div>
+                            <div class="timeline-date">2013 March - 2013 December</div>
                             <h2>Sales and marketing Representative / Pos Sys Admin</h2>
                             <h4>Superior Beauty Store, Kenya</h4>
                             <p>
                                 - Managing the beauty equipment portfolio (Superior Beauty Store) and Marketing.
                                 - Managing the POS Systems, Equipment’s, and database to reduce downtimes and ensure efficiency
-                                                            </p>
+                            </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
